@@ -1,6 +1,10 @@
 Revision history for Perl extension Net::SSLeay.
 
 1.89_05 ????-??-??
+	- Expose SSL_get_ciphers. Thanks to github user dylc5190.
+	- Expose SSL_CIPHER_get_version and fix SSL_CIPHER_description
+	  and SSL_CIPHER_get_bits. Also fixed and enhanced
+	  documentation for these and related SSL_CIPHER functions.
 	- Clarify libssl version support policy: all stable versions of OpenSSL in
 	  the 0.9.8 - 1.1.1 branches (with the exception of 0.9.8 - 0.9.8b) and all
 	  stable releases of LibreSSL in the 2.0 - 3.1 series are supported.
